--- a/index.html
+++ b/index.html
@@ -4,135 +4,203 @@
 <head>
   <meta charset="utf-8">
   <title>Nissi's Personal Site</title>
+  <!-- cdn of bootstrap for css-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <!-- own css -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
-
   <div class="top">
-    <div class="name">
-      <h1>Nissi Lau</h1>
-    </div>
-      <a href="index.html">  <img class="nissi-image" src="images/1082.gif" alt="Nissi's image"></a>
-    <div class="contact">
-      <p>6049234794</p>
-      <p>theone@gmail.com</p>
-      <p>7700 No.8 Rd.</p>
-      <p>Richmond B.C.</p>
-    </div>
-    <div class="zoom">
+    <div class="container">
+
+      <div class="name" class="jumbotron">
+
+        <h1 data-toggle="popover" data-placement="bottom" data-content="HE is a great Man!" class="display-4">Nissi Lau</h1>
+      </div>
+
+      </li>
+      <nav class="navbar navbar-expand-md navbar-light navbar-bg-color">
+        <a class="navbar-brand mb-0 h1">Nissi Lau</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Contact
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li class="dropdown-item">6049234794</li>
+              <li class="dropdown-item">theone@gmail.com</li>
+              <div class="dropdown-divider"></div>
+              <li class="dropdown-item">7700 No.8 Rd. Richmond B.C.</li>
+            </div>
+            <li class="nav-item">
+              <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Job Experience
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#message">Zion Message[榮耀盼望]</a>
+                <a class="dropdown-item" href="#perfect-zound">Perfect Zound</a>
+                <a class="dropdown-item" href="#legacy">Legacy</a>
+                <a class="dropdown-item" href="#tome">TOME</a>
+                <div class="dropdown-divider"></div> 
+                <a class="dropdown-item" href="#tome">Deep Production</a>
+              </div>
+            </li>
+            <a class="nav-link active" href="#hobbies">Hobbies</a>
+          </ul>
+        </div>
+      </nav>
 
     </div>
   </div>
 
-    <div class="middle">
-
-      <div class="work-experiment">
-        <table>
-          <tbody>
-            <tr >
-              <td>1985-1987     </td>
-              <td>Barber Shop Owner</td>
-              <td>  <img class="barbershop" src="images/modern-barbershop.jpg" alt="barber-shop"></td>
-            </tr>
-
-            <tr>
-              <td>1987-2020     </td>
-              <td>Church Ministery</td>
-              <td>  <img class="zion-image" src="https://www.ziondaily.com//2.0/img_s/2020/09/02c/03k_200920.jpg?1600970914" alt="zion"> </td>
-            </tr>
-          </tbody>
-        </table>
-
-      </div>
-
-      <div class="experience">
-        <hr>
-
-        <div class="zion-message">
-          <img class="zion-message-image" src="https://www.ziondaily.com//2.0/img_s/2010/01/02c/03k_100117.jpg?1264056853" alt="">
-          <div class="zion-message-text">
-            <h3>2012-Zion Message</h3>
-            <p>
-            On God's calling, Pastor Wind have started preparing a new message called [2012 榮耀盼望] on December 2009.  Unlike triditionl presentation, this message was set up as a movie
-            because the amount of information was to way much that it can not be translated verbally.  So the best idea was to make it verbal with images.
-            </p>
-          </div>
-        </div>
-        <hr>
-
-        <div class="legacy">
-          <img class="legacy-image" src="https://www.ziondaily.com/2.0/img_s/2018/03/05a/ZD_legacy_560x250px.jpg?1521531203" alt="legacy-image">
-          <div class="legacy-text">
-
-           <h3>The Legacy - Graduation Ceremony</h3>
-            <p>
-            A graduation ceremony I have held for people that are leaving my forum and headding to a new forum.  It a represatation that
-            the have learn what they need from me like a legacy pass on.
-            </p>
-          </div>
-        </div>
-        <hr>
-
-        <div class="tome">
-          <img class="tome-image" src="https://www.ziondaily.com/2.0/img_s/2017/08/05a/20170829_ziondaily_Talk-on-Mandela-Effect_Web_560x250.jpg?1504083051" alt="TOME image">
-          <div class="tome-text">
-            <h3>TOME - Talk on Mandela Effect</h3>
-            <p>I host this event in Hong Kong once every two months in 2017.  The event is base on the africian president Nelson Mandela.  On the internet say that he died in
-            2015 yet there are people that said that he died in jail 1980.</p>
-          </div>
-        </div>
-        <hr>
-
-        <div class="perfect-zound">
-          <img class="perfect-zound-image" src="https://www.ziondaily.com/2.0/img_s/2016/10/05a/Good%20New_R2-01.jpg?1477365989" alt="zion">
-          <div class="perfect-zound-text">
-
-            <h3>Perfect Zound</h3>
-            <p>
-            The perfect sound, created by pastor Wind Leung when he was trying to find a earphone that can let people hear the messages from God in songs that Zion have created.
-            </p>
-
-          </div>
-        </div>
-        <hr>
-
-        <div class="">
-
-          <h3> <a href="deep-production.html">  Deep Production <img class="deep-production-image" src="images/unnamed.jpg" alt="Deep Production image"></a> </h3>
-          <p>I created this channel original for the people of my forum to understand the messages of 2012 message in more simple and easier fashion.</p>
-        </div>
-        <hr>
-
-
-      </div>
-
-      <div class="hobbies">
-        <h2>Hobbies</h2>
-        <div class="hobbies-text">
-          <ul>
-            <li>Cooking 🍳</li>
-            <li>Fishing 🎣</li>
-            <li>Praise and worship 🙌</li>
-            <li>Strategy games🎮</li>
-            <li>Taking care of Grand-children👴</li>
-
-          </ul>
-        </div>
-
-      </div>
+  <div class="middle">
+    <div class="homebutton">
+      <a href="index.html"> <img class="nissi-image" src="images/1082.gif" alt="Nissi's image"></a>
     </div>
 
-    <div class="bottom">
+    <div class="work-experiment">
+      <h1>Work Experiment</h1>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h2>1985-1987</h2>
+            <div class="carousel">
 
-      <a href="http://ziondaily.com/2.0/web/portal/"><img class="small-logo" src="images/zionlogo.png" alt="Website"></a>
-      <a href="https://www.youtube.com/channel/UC_VnyV-4d8cHvV12athKy7Q/feed"><img class="small-logo" src="https://www.flaticon.com/svg/static/icons/svg/1384/1384060.svg" alt="Youtube Channel"></a>
-      <a href="https://www.facebook.com/Deep-Production-1631865760419980/?fref=nf"><img class="small-logo" src="https://s2.googleusercontent.com/s2/favicons?domain_url=https%3A%2F%2Fwww.facebook.com&feature=youtube_channel" alt="Facebook"></a>
-      <a href="index.html">  <img id="homebutton" src="images/1082.gif" alt="Nissi's image">Home</a>
+              <img class="carousel-image" src="images/modern-barbershop.jpg" class="d-block w-100" alt="barber-shop">
+              <em>Barber Shop Owner</em>
+            </div>
+          </div>
+          <div class="carousel-item">
+
+            <h2>1987-2020</h2>
+            <div class="carousel">
+
+              <img class="carousel-image" src="https://www.ziondaily.com//2.0/img_s/2020/09/02c/03k_200920.jpg?1600970914" class="d-block w-100" alt="Zion">
+              <em>Church Ministery</em>
+
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
 
     </div>
 
+    <div class="experience" id="experience">
+
+
+      <div class="container can-bg-color">
+
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col mb-4 ">
+            <div class="card card-color" id="message">
+              <img src="https://www.ziondaily.com//2.0/img_s/2010/01/02c/03k_100117.jpg?1264056853" class="card-img-top" alt="2012">
+              <div class="card-body ">
+                <h3 class="card-title">2012-Zion Message</h3>
+                <p class="card-text">On God's calling, Pastor Wind have started preparing a new message called [2012 榮耀盼望] on December 2009.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card card-color" id="perfect-zound">
+              <img src="https://www.ziondaily.com/2.0/img_s/2016/10/05a/Good%20New_R2-01.jpg?1477365989" class="card-img-top" alt="Perfect Zound">
+              <div class="card-body">
+                <h3 class="card-title">Perfect Zound</h3>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card card-color" id="legacy">
+              <div class="card-body">
+                <h3 class="card-title">The Legacy</h3>
+                <p class="card-text">A graduation ceremony I have held for people that are leaving my forum and headding to a new forum. It a represatation that
+                  the have learn what they need from me like a legacy pass on.</p>
+              </div>
+              <img src="https://www.ziondaily.com/2.0/img_s/2018/03/05a/ZD_legacy_560x250px.jpg?1521531203" class="card-img-top" alt="legacy-image">
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card card-color" id="tome">
+              <div class="card-body">
+                <h3 class="card-title">TOME - Talk on Mandela Effect</h3>
+                <p class="card-text">I host this event in Hong Kong once every two months in 2017. The event is base on the africian president Nelson Mandela. On the internet say that he died in
+                  2015 yet there are people that said that he died in jail 1980.</p>
+              </div>
+              <img src="https://www.ziondaily.com/2.0/img_s/2017/08/05a/20170829_ziondaily_Talk-on-Mandela-Effect_Web_560x250.jpg?1504083051" class="card-img-top" alt="TOME image">
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
+      <hr>
+
+
+      <div class="deep-production">
+
+        <h3> <a href="deep-production.html"> Deep Production <img class="deep-production-image" src="images/unnamed.jpg" alt="Deep Production image"></a> </h3>
+        <p>I created this channel original for the people of my forum to understand the messages of 2012 message in more simple and easier fashion.</p>
+      </div>
+
+
+    </div>
+
+    <div class="hobbies" id="hobbies">
+      <h2>Hobbies</h2>
+      <div class="hobbies-text">
+        <ul>
+          <li>Cooking 🍳</li>
+          <li>Fishing 🎣</li>
+          <li>Praise and worship 🙌</li>
+          <li>Strategy games🎮</li>
+          <li>Taking care of Grand-children👴</li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+  <!-- bottom -->
+  <div class="bottom">
+
+    <a href="http://ziondaily.com/2.0/web/portal/"><img class="small-logo" src="images/zionlogo.png" alt="Website"></a>
+    <a href="https://www.youtube.com/channel/UC_VnyV-4d8cHvV12athKy7Q/feed"><img class="small-logo" src="https://www.flaticon.com/svg/static/icons/svg/1384/1384060.svg" alt="Youtube Channel"></a>
+    <a href="https://www.facebook.com/Deep-Production-1631865760419980/?fref=nf"><img class="small-logo" src="https://s2.googleusercontent.com/s2/favicons?domain_url=https%3A%2F%2Fwww.facebook.com&feature=youtube_channel" alt="Facebook"></a>
+    <a href="index.html"> <img id="homebutton" src="images/1082.gif" alt="Nissi's image">Home</a>
+
+  </div>
+
+  <!--js mdn -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script type="text/javascript">
+    $(function() {
+      $('[data-toggle="popover"]').popover()
+    })
+  </script>
 </body>
 
 </html>
